# CyberSentinel

./: .env.dev  .env.example  .gitignore  Dockerfile.api  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-analyst-agent.sh  test-helm-phase1.sh  test-metrics-server.sh  test-phase2-complete.sh  test-phase3-autoscaling.sh  test-phase3-simple.sh  test-phase4-observability.sh  test-phase5-security.sh  test-phase6-complete.sh  test-responder-agent.sh  test-scout-agent.sh  test-ui.sh
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml  irsa-validation.yml  ui-tests.yml
agents/analyst/: agent.py  rationale_schema.json  sigma_gen.py
agents/orchestrator/: graph.py  tools.py
agents/responder/: agent.py  opa_client.py
agents/responder/playbooks/: dsl.py  runner.py
agents/responder/policies/: data.json  response_authorization.rego
agents/scout/: agent.py
api/: __init__.py  config.py  dependencies.py  main.py  schemas.py  telemetry.py
api/routers/: __init__.py  detections.py  evaluate.py  health.py  incidents.py  reports.py
api/services/: __init__.py  detection_svc.py  eval_svc.py  incident_svc.py
bus/: __init__.py
bus/adapters/: jetstream_adapter.py  kafka_adapter.py  nats_adapter.py
bus/proto/: __init__.py  compile.py  cybersentinel.proto
detection/: __init__.py  coordinator.py  feedback_loop.py  performance_monitor.py  rule_deployment.py  tuning_engine.py
detections/sigma/rules/: ssh_lateral_movement.yml
docs/: DEPLOYMENT.md  api.md  attack_ingest.md  multitenancy.md  rag_quality.md  rl.md  streaming.md  vector_stores.md
eval/: __init__.py  framework.py  harness.py  integrations.py  metrics.py  replay_engine.py  reporter.py  scenario_runner.py
eval/rag/: eval_rag.py  gold_set.json
eval/rl/: learning_curve.txt  metrics.jsonl  policy.npz  score.json  summary.md  traces.jsonl
eval/suite/: scenarios.yml
eval/templates/: standard.html  standard.md
infra/: README-PR2.md  README-PR3.md  README-PR4.md  README-PR5.md  README-PR6.md  README-PR7.md  README-PR8.md  README-PR9.md  ci-validate-irsa.sh  deploy-alertmanager.sh  deploy-argocd.sh  deploy-cloudwatch.sh  deploy-external-secrets.sh  deploy-infrastructure.sh  deploy-network-security.sh  deploy-slo.sh  deploy-velero.sh  migrate-secrets.sh  render-k8s-manifests.sh  test-alertmanager.sh  test-argocd.sh  test-cloudwatch.sh  test-external-secrets.sh  test-infrastructure.sh  test-network-security.sh  test-slo.sh  test-velero.sh
infra/backup/: velero-setup.yaml
infra/helm/cybersentinel/: Chart.yaml  values-dev.yaml  (+3 more)
infra/k8s/: namespace.yaml
infra/terraform/: cloudwatch.tf  deploy.sh  eks.tf  irsa.tf  main.tf  outputs.tf  route53.tf  secrets.tf  storage.tf  variables.tf  vpc.tf  waf.tf
ingest/: __init__.py
ingest/consumers/: telemetry_consumer.py
ingest/ecs/: ecs_map.py
ingest/replay/: replayer.py
integration_tests/: test_jetstream_integration.py
knowledge/: __init__.py  chunkers.py  embed.py  graph_sync.py  rag_index.py  rag_query.py  rerank.py
knowledge/corpora/: attack_stix.py  loaders.py
redteam/: __init__.py  adversary_engine.py  campaign_generator.py  framework.py  orchestrator.py  telemetry_simulator.py
redteam/envs/: __init__.py  attack_env.py  detector_adapter.py
redteam/policy/: __init__.py  ppo.py  simple_pg.py
rl/: __init__.py  eval_adversary.py  plot_rl.py  train_adversary.py
scripts/: disaster-recovery.sh  seed_data.py  test_agents_simple.py  test_detection_loop.py  test_detection_simple.py  test_deterministic.py  test_evaluation_system.py  test_knowledge.py  test_orchestration.py  test_redteam_simple.py  test_redteam_simulation.py  test_replay.py
storage/: __init__.py
storage/clickhouse/: client.py  ddl.sql
storage/vector/: base.py  faiss_store.py  pinecone_store.py
testing/: settings.local.json
tests/: test_attack_ingest.py  test_jetstream.py  test_rag_quality.py  test_tenancy.py  test_vector_stores.py
tests/api/: conftest.py  test_detections.py  test_evaluate.py  test_health.py  test_incidents.py  test_reports.py
tests/rl/: __init__.py  test_action_mask.py  test_env_contract.py  test_pg_step.py  test_ppo_smoke.py  test_reward_signal.py  test_smoke_train.py
tools/: stream_load.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/playwright-report/: index.html
ui/test-results/: .last-run.json
ui/tests/: README.md  demo-features.spec.ts  detection-rules.spec.ts  end-to-end-verification.spec.ts  evaluation-dashboard.spec.ts  feature-verification.spec.ts  incident-details.spec.ts  integration.spec.ts  smoke-test-live-data.spec.ts  smoke.spec.ts
(+104 files in other folders)
